--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/server.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.2.0",
     "elysia": "latest",
     "mongoose": "^8.12.1"
   },
