--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=8080
 NODE_ENV=development
 MONGODB_URL=mongodb://localhost:27017/example
 APP_SECRET_KEY=black_cat
+S3_ACCESS_KEY=
+S3_SECRET_ACCESS_KEY=
