--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/server.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
     "@elysiajs/cors": "^1.2.0",
     "@elysiajs/swagger": "^1.2.2",
     "bcryptjs": "^3.0.2",
