--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ PORT=8080
 NODE_ENV=development
 MONGODB_URL=mongodb://localhost:27017/example
 APP_SECRET_KEY=black_cat
-S3_ACCESS_KEY=
+S3_REGION=ap-southeast-1
+S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=fnt-project
